--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="footer-icons">
             <ul>
               <li><a href="https://www.linkedin.com/in/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
-              <li><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
+              <li><a href="https://www.instagram.com/vae_studyo?utm_source=qr" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
               <li><a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube fa-2x"></i></a></li>
           </ul>
           </div>
